some data cleanup for ratings

--- a/dataset/elo_footbal_com/01_data_extraction.ipynb
+++ b/dataset/elo_footbal_com/01_data_extraction.ipynb
@@ -10,7 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "league_names = ['primera', 'segunda']\n",
+    "league_years = list(range(1999, 2023))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +283,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>658</th>\n",
+       "      <th>23593</th>\n",
        "      <td>2022/08/13</td>\n",
        "      <td>Segunda Division</td>\n",
        "      <td></td>\n",
@@ -292,7 +302,7 @@
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>659</th>\n",
+       "      <th>23594</th>\n",
        "      <td>2022/08/13</td>\n",
        "      <td>Segunda Division</td>\n",
        "      <td></td>\n",
@@ -311,7 +321,7 @@
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>660</th>\n",
+       "      <th>23595</th>\n",
        "      <td>2022/08/12</td>\n",
        "      <td>Primera Division</td>\n",
        "      <td></td>\n",
@@ -330,7 +340,7 @@
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>661</th>\n",
+       "      <th>23596</th>\n",
        "      <td>2022/08/12</td>\n",
        "      <td>Segunda Division</td>\n",
        "      <td></td>\n",
@@ -349,7 +359,7 @@
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>662</th>\n",
+       "      <th>23597</th>\n",
        "      <td>2022/08/10</td>\n",
        "      <td>Supercup</td>\n",
        "      <td>n</td>\n",
@@ -373,62 +383,62 @@
        "</div>"
       ],
       "text/plain": [
-       "           date           division unused_1               home  \\\n",
-       "0    2000/06/04  Segunda Division            Atlético Madrid B   \n",
-       "1    2000/06/04  Segunda Division                  CD Logroñés   \n",
-       "2    2000/06/04  Segunda Division                UD Las Palmas   \n",
-       "3    2000/06/04  Segunda Division                 UD Salamanca   \n",
-       "4    2000/06/04  Segunda Division                   CA Osasuna   \n",
-       "..          ...                ...      ...                ...   \n",
-       "658  2022/08/13  Segunda Division                UD Las Palmas   \n",
-       "659  2022/08/13  Segunda Division                  CD Mirandés   \n",
-       "660  2022/08/12  Primera Division                   CA Osasuna   \n",
-       "661  2022/08/12  Segunda Division                   Levante UD   \n",
-       "662  2022/08/10          Supercup         n        Real Madrid   \n",
+       "             date           division unused_1               home  \\\n",
+       "0      2000/06/04  Segunda Division            Atlético Madrid B   \n",
+       "1      2000/06/04  Segunda Division                  CD Logroñés   \n",
+       "2      2000/06/04  Segunda Division                UD Las Palmas   \n",
+       "3      2000/06/04  Segunda Division                 UD Salamanca   \n",
+       "4      2000/06/04  Segunda Division                   CA Osasuna   \n",
+       "...           ...                ...      ...                ...   \n",
+       "23593  2022/08/13  Segunda Division                UD Las Palmas   \n",
+       "23594  2022/08/13  Segunda Division                  CD Mirandés   \n",
+       "23595  2022/08/12  Primera Division                   CA Osasuna   \n",
+       "23596  2022/08/12  Segunda Division                   Levante UD   \n",
+       "23597  2022/08/10          Supercup         n        Real Madrid   \n",
        "\n",
-       "    home_pre_rating home_rating_delta home_post_rating result prob_h prob_d  \\\n",
-       "0              1705                 0             1705  0 - 0     34     29   \n",
-       "1              1683               +11             1694  1 - 0     31     29   \n",
-       "2              1812                +5             1817  2 - 1     59     23   \n",
-       "3              1741                +7             1748  2 - 1     47     28   \n",
-       "4              1803                +4             1807  2 - 1     61     22   \n",
-       "..              ...               ...              ...    ...    ...    ...   \n",
-       "658            1778                -4             1774  0 - 0     52     26   \n",
-       "659            1709                -3             1706  1 - 1     47     28   \n",
-       "660            1921               +12             1933  2 - 1     28     28   \n",
-       "661            1913                -6             1907  0 - 0     65     21   \n",
-       "662            2294                +8             2302  2 - 0     66     20   \n",
+       "      home_pre_rating home_rating_delta home_post_rating result prob_h prob_d  \\\n",
+       "0                1705                 0             1705  0 - 0     34     29   \n",
+       "1                1683               +11             1694  1 - 0     31     29   \n",
+       "2                1812                +5             1817  2 - 1     59     23   \n",
+       "3                1741                +7             1748  2 - 1     47     28   \n",
+       "4                1803                +4             1807  2 - 1     61     22   \n",
+       "...               ...               ...              ...    ...    ...    ...   \n",
+       "23593            1778                -4             1774  0 - 0     52     26   \n",
+       "23594            1709                -3             1706  1 - 1     47     28   \n",
+       "23595            1921               +12             1933  2 - 1     28     28   \n",
+       "23596            1913                -6             1907  0 - 0     65     21   \n",
+       "23597            2294                +8             2302  2 - 0     66     20   \n",
        "\n",
-       "    prob_a                 away away_pre_rating away_rating_delta  \\\n",
-       "0       37            CP Mérida            1817                 0   \n",
-       "1       40        Villarreal CF            1832               -11   \n",
-       "2       18           Levante UD            1700                -5   \n",
-       "3       26             SD Eibar            1738                -7   \n",
-       "4       16    Recreativo Huelva            1673                -4   \n",
-       "..     ...                  ...             ...               ...   \n",
-       "658     22        Real Zaragoza            1727                +4   \n",
-       "659     25       Sporting Gijón            1703                +3   \n",
-       "660     44           Sevilla FC            2103               -12   \n",
-       "661     15            SD Huesca            1755                +6   \n",
-       "662     14  Eintracht Frankfurt            2021                -8   \n",
+       "      prob_a                 away away_pre_rating away_rating_delta  \\\n",
+       "0         37            CP Mérida            1817                 0   \n",
+       "1         40        Villarreal CF            1832               -11   \n",
+       "2         18           Levante UD            1700                -5   \n",
+       "3         26             SD Eibar            1738                -7   \n",
+       "4         16    Recreativo Huelva            1673                -4   \n",
+       "...      ...                  ...             ...               ...   \n",
+       "23593     22        Real Zaragoza            1727                +4   \n",
+       "23594     25       Sporting Gijón            1703                +3   \n",
+       "23595     44           Sevilla FC            2103               -12   \n",
+       "23596     15            SD Huesca            1755                +6   \n",
+       "23597     14  Eintracht Frankfurt            2021                -8   \n",
        "\n",
-       "    away_post_rating unused_2  \n",
-       "0               1817           \n",
-       "1               1821           \n",
-       "2               1695           \n",
-       "3               1731           \n",
-       "4               1669           \n",
-       "..               ...      ...  \n",
-       "658             1731           \n",
-       "659             1706           \n",
-       "660             2091           \n",
-       "661             1761           \n",
-       "662             2013           \n",
+       "      away_post_rating unused_2  \n",
+       "0                 1817           \n",
+       "1                 1821           \n",
+       "2                 1695           \n",
+       "3                 1731           \n",
+       "4                 1669           \n",
+       "...                ...      ...  \n",
+       "23593             1731           \n",
+       "23594             1706           \n",
+       "23595             2091           \n",
+       "23596             1761           \n",
+       "23597             2013           \n",
        "\n",
        "[23598 rows x 16 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +446,7 @@
    "source": [
     "# Retrieving the matches and merging them into a single dataframe\n",
     "df = pd.concat(\n",
-    "    [extract_games(year) for year in range(1999, 2023)])\n",
+    "    [extract_games(year) for year in league_years])\n",
     "\n",
     "df.reset_index(drop=True)"
    ]
@@ -451,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +783,7 @@
        "[23598 rows x 16 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,6 +791,238 @@
    "source": [
     "df"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data clean up"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dropping redundant data"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The values in the division column must be renamed and the rows other than 'Primera' and 'Segunda' should be dropped."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Champions League ', 'Champions League q. ', 'Copa del Rey ',\n",
+       "       'Europa Conf. League ', 'Europa Conf. League q. ',\n",
+       "       'Europa League ', 'Europa League q. ', 'Intertoto Cup ',\n",
+       "       'Primera Division ', 'Primera Division rel. ', 'Segunda Division ',\n",
+       "       'Supercopa ', 'Supercup '], dtype=object)"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['division'].sort_values().unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['division'] = df['division'].replace({\n",
+    "    'Segunda Division ': 'segunda',\n",
+    "    'Primera Division ': 'primera',\n",
+    "    'Primera Division rel. ': 'primera'\n",
+    "})\n",
+    "\n",
+    "df = df[df['division'].isin(league_names)]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The two unused columns must be dropped."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(['unused_1', 'unused_2'], axis='columns')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The probability columns are based on merely the difference in the ratings of the two teams; hence they are not very accurate and may be dropped."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(['prob_h', 'prob_d', 'prob_a'], axis='columns')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The result of the match is already available in other datasets and is redundant, so it must be dropped as well."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop('result', axis='columns')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Processing the match dates"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The date column must be converted into DateTime64 format."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['date'] = pd.to_datetime(df['date'])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some matches are set to be held later and have not happened yet; those are to be removed from the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[\n",
+    "    (df['date'] <= pd.to_datetime('today')) &\n",
+    "    (df['home_post_rating'] != '') &\n",
+    "    (df['away_post_rating'] != '')]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cleaning up rating columns"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The rating columns must all be converted to Int64"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['date', 'division', 'home', 'home_pre_rating', 'home_rating_delta',\n",
+       "       'home_post_rating', 'away', 'away_pre_rating', 'away_rating_delta',\n",
+       "       'away_post_rating'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_cols = [\n",
+    "    'home_pre_rating', \n",
+    "    'home_rating_delta',\n",
+    "    'home_post_rating',\n",
+    "    'away_pre_rating',\n",
+    "    'away_rating_delta',\n",
+    "    'away_post_rating'\n",
+    "]\n",
+    "\n",
+    "for col in rating_cols:\n",
+    "    df[col] = df[col].astype('Int64')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Making team names consistent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
