--- a/dataset/football_data_co_uk/01_data_consolidation.ipynb
+++ b/dataset/football_data_co_uk/01_data_consolidation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "1f0059f8-96e0-4a3d-8819-f65492287ac0",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "5380469c-b0ca-4390-9e0e-57121bf260b0",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "id": "9adb0464-f019-483e-a5c4-6ac084044d5e",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
        "dict_keys(['primera_1999_2000', 'segunda_1999_2000', 'primera_2000_2001', 'segunda_2000_2001', 'primera_2001_2002', 'segunda_2001_2002', 'primera_2002_2003', 'segunda_2002_2003', 'primera_2003_2004', 'segunda_2003_2004', 'primera_2004_2005', 'segunda_2004_2005', 'primera_2005_2006', 'segunda_2005_2006', 'primera_2006_2007', 'segunda_2006_2007', 'primera_2007_2008', 'segunda_2007_2008', 'primera_2008_2009', 'segunda_2008_2009', 'primera_2009_2010', 'segunda_2009_2010', 'primera_2010_2011', 'segunda_2010_2011', 'primera_2011_2012', 'segunda_2011_2012', 'primera_2012_2013', 'segunda_2012_2013', 'primera_2013_2014', 'segunda_2013_2014', 'primera_2014_2015', 'segunda_2014_2015', 'primera_2015_2016', 'segunda_2015_2016', 'primera_2016_2017', 'segunda_2016_2017', 'primera_2017_2018', 'segunda_2017_2018', 'primera_2018_2019', 'segunda_2018_2019', 'primera_2019_2020', 'segunda_2019_2020', 'primera_2020_2021', 'segunda_2020_2021', 'primera_2021_2022', 'segunda_2021_2022', 'primera_2022_2023', 'segunda_2022_2023'])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "id": "14d8544f",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "id": "613c1069",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "id": "8d2e3fbd",
    "metadata": {},
    "outputs": [],
@@ -220,396 +220,13 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "b5d3a84c",
-   "metadata": {},
-   "source": [
-    "# Correcting the dates\n",
-    "The dates are currently of type string (object). They need to be converted into DateTime.<br>\n",
-    "However, before doing that, some values must be tweaked to conform to conventional date formats.<br>\n",
-    "For instance:\n",
-    "<ul>\n",
-    "    <li>'%d/%m/99' must be converted to '%d/%m/1999'</li>\n",
-    "    <li>'%d/%m/00' must be converted to '%d/%m/2000'</li>\n",
-    "    <li>'%d/%m/01' must be converted to '%d/%m/2001'</li>\n",
-    "    <li>...</li>\n",
-    "</ul>"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "4a7c6f2e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Setting the required corrections in terms of RegEx\n",
-    "replacements = {\n",
-    "        r\"/99$\": \"/1999\",\n",
-    "    }\n",
-    "replacements.update((f\"/{str(y).zfill(2)}$\", f\"/{2000 + y}\") for y in range(24))\n",
-    "# Fixing the inconsistencies in the date columns\n",
-    "df['Date'] = df['Date'].replace(replacements, regex=True)\n",
-    "# Converting the date column from object to DateTime64\n",
-    "df['Date'] = pd.to_datetime(df['Date'], format='%d/%m/%Y')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "152fc678",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Div</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>HomeTeam</th>\n",
-       "      <th>AwayTeam</th>\n",
-       "      <th>HTHG</th>\n",
-       "      <th>HTAG</th>\n",
-       "      <th>HTR</th>\n",
-       "      <th>HS</th>\n",
-       "      <th>AS</th>\n",
-       "      <th>HST</th>\n",
-       "      <th>AST</th>\n",
-       "      <th>HF</th>\n",
-       "      <th>AF</th>\n",
-       "      <th>HC</th>\n",
-       "      <th>AC</th>\n",
-       "      <th>HY</th>\n",
-       "      <th>AY</th>\n",
-       "      <th>HR</th>\n",
-       "      <th>AR</th>\n",
-       "      <th>Time</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>primera</td>\n",
-       "      <td>1999-08-21</td>\n",
-       "      <td>Ath Bilbao</td>\n",
-       "      <td>Betis</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>D</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>primera</td>\n",
-       "      <td>1999-08-21</td>\n",
-       "      <td>Mallorca</td>\n",
-       "      <td>Real Madrid</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>D</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>primera</td>\n",
-       "      <td>1999-08-21</td>\n",
-       "      <td>Valencia</td>\n",
-       "      <td>Santander</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>A</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>primera</td>\n",
-       "      <td>1999-08-22</td>\n",
-       "      <td>Ath Madrid</td>\n",
-       "      <td>Vallecano</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>A</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>primera</td>\n",
-       "      <td>1999-08-22</td>\n",
-       "      <td>Barcelona</td>\n",
-       "      <td>Zaragoza</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>D</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>314</th>\n",
-       "      <td>segunda</td>\n",
-       "      <td>2023-02-26</td>\n",
-       "      <td>Levante</td>\n",
-       "      <td>Lugo</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>H</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>15:15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>315</th>\n",
-       "      <td>segunda</td>\n",
-       "      <td>2023-02-26</td>\n",
-       "      <td>Zaragoza</td>\n",
-       "      <td>Burgos</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>D</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>15:15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>316</th>\n",
-       "      <td>segunda</td>\n",
-       "      <td>2023-02-26</td>\n",
-       "      <td>Las Palmas</td>\n",
-       "      <td>Ponferradina</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>D</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>17:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>317</th>\n",
-       "      <td>segunda</td>\n",
-       "      <td>2023-02-26</td>\n",
-       "      <td>Oviedo</td>\n",
-       "      <td>Albacete</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>H</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>20:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>318</th>\n",
-       "      <td>segunda</td>\n",
-       "      <td>2023-02-27</td>\n",
-       "      <td>Granada</td>\n",
-       "      <td>Malaga</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>D</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>20:00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>19915 rows × 20 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Div       Date    HomeTeam      AwayTeam  HTHG  HTAG HTR    HS    AS  \\\n",
-       "0    primera 1999-08-21  Ath Bilbao         Betis   0.0   0.0   D   NaN   NaN   \n",
-       "1    primera 1999-08-21    Mallorca   Real Madrid   0.0   0.0   D   NaN   NaN   \n",
-       "2    primera 1999-08-21    Valencia     Santander   0.0   1.0   A   NaN   NaN   \n",
-       "3    primera 1999-08-22  Ath Madrid     Vallecano   0.0   1.0   A   NaN   NaN   \n",
-       "4    primera 1999-08-22   Barcelona      Zaragoza   0.0   0.0   D   NaN   NaN   \n",
-       "..       ...        ...         ...           ...   ...   ...  ..   ...   ...   \n",
-       "314  segunda 2023-02-26     Levante          Lugo   2.0   1.0   H  17.0   8.0   \n",
-       "315  segunda 2023-02-26    Zaragoza        Burgos   0.0   0.0   D  15.0  13.0   \n",
-       "316  segunda 2023-02-26  Las Palmas  Ponferradina   0.0   0.0   D  21.0   1.0   \n",
-       "317  segunda 2023-02-26      Oviedo      Albacete   1.0   0.0   H  11.0   9.0   \n",
-       "318  segunda 2023-02-27     Granada        Malaga   0.0   0.0   D   9.0   7.0   \n",
-       "\n",
-       "     HST  AST    HF    AF    HC   AC   HY   AY   HR   AR   Time  \n",
-       "0    NaN  NaN   NaN   NaN   NaN  NaN  NaN  NaN  NaN  NaN    NaN  \n",
-       "1    NaN  NaN   NaN   NaN   NaN  NaN  NaN  NaN  NaN  NaN    NaN  \n",
-       "2    NaN  NaN   NaN   NaN   NaN  NaN  NaN  NaN  NaN  NaN    NaN  \n",
-       "3    NaN  NaN   NaN   NaN   NaN  NaN  NaN  NaN  NaN  NaN    NaN  \n",
-       "4    NaN  NaN   NaN   NaN   NaN  NaN  NaN  NaN  NaN  NaN    NaN  \n",
-       "..   ...  ...   ...   ...   ...  ...  ...  ...  ...  ...    ...  \n",
-       "314  6.0  4.0  18.0  10.0  17.0  3.0  1.0  0.0  0.0  0.0  15:15  \n",
-       "315  5.0  2.0   9.0   9.0   6.0  2.0  3.0  1.0  0.0  0.0  15:15  \n",
-       "316  6.0  1.0   9.0  16.0   8.0  2.0  1.0  3.0  0.0  1.0  17:30  \n",
-       "317  3.0  3.0  10.0  16.0   5.0  3.0  2.0  3.0  0.0  0.0  20:00  \n",
-       "318  3.0  2.0   7.0   9.0   3.0  6.0  4.0  1.0  0.0  0.0  20:00  \n",
-       "\n",
-       "[19915 rows x 20 columns]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "id": "3b5d2318",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"./processed_ds/matches.csv\", index=False)"
+    "df.to_csv(\"./initial_ds/matches.csv\", index=False)"
    ]
   }
  ],
