removed data of leagues other than primera

--- a/dataset/elo_footbal_com/02_data_cleanup.ipynb
+++ b/dataset/elo_footbal_com/02_data_cleanup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "       'Europa Conf. League q. '], dtype=object)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,16 +59,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.replace({\n",
-    "    'Segunda Division ': 'segunda',\n",
-    "    'Primera Division ': 'primera'\n",
-    "})\n",
-    "\n",
-    "df = df[df['division'].isin(['segunda', 'primera'])]"
+    "df = df[df['division'] == 'Primera Division ']"
    ]
   },
   {
@@ -87,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,6 +97,23 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The division column only contains the value 'Primera Division ', so it can be dropped."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop('division', axis='columns')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -110,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,71 +214,93 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Making team names consistent"
+    "# Saving the cleaned up dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"./processed_ds/ratings.csv\", index=False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extracting the team names\n",
+    "These team names will be the reference for making all the team names across all datasets consistent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Valencia CF            449\n",
-       "Athletic Bilbao        449\n",
-       "FC Barcelona           448\n",
-       "Real Madrid            448\n",
-       "Sevilla FC             430\n",
-       "Espanyol Barcelona     430\n",
-       "Villarreal CF          410\n",
-       "Atlético Madrid        410\n",
-       "Real Sociedad          391\n",
-       "Real Betis             372\n",
-       "CA Osasuna             353\n",
-       "Getafe CF              335\n",
-       "Celta Vigo             335\n",
-       "Málaga CF              323\n",
-       "Deportivo La Coruña    323\n",
-       "RCD Mallorca           315\n",
-       "Levante UD             266\n",
-       "Real Valladolid        258\n",
-       "Racing Santander       228\n",
-       "Real Zaragoza          228\n",
-       "Rayo Vallecano         220\n",
-       "CD Alavés              209\n",
-       "Granada CF             171\n",
-       "SD Eibar               133\n",
-       "UD Almería             126\n",
-       "Sporting Gijón         114\n",
-       "UD Las Palmas           95\n",
-       "Elche CF                88\n",
-       "Recreativo Huelva       76\n",
-       "CD Numancia             76\n",
-       "CD Leganés              76\n",
-       "Cádiz CF                69\n",
-       "Girona FC               50\n",
-       "Real Murcia             38\n",
-       "Albacete                38\n",
-       "CD Tenerife             38\n",
-       "Real Oviedo             38\n",
-       "SD Huesca               38\n",
-       "Gimnàstic               19\n",
-       "Xerez CD                19\n",
-       "Hércules CF             19\n",
-       "Córdoba CF              19\n",
-       "Name: home, dtype: int64"
+       "Valencia CF            897\n",
+       "FC Barcelona           897\n",
+       "Real Madrid            897\n",
+       "Athletic Bilbao        897\n",
+       "Sevilla FC             859\n",
+       "Espanyol Barcelona     859\n",
+       "Villarreal CF          821\n",
+       "Atlético Madrid        821\n",
+       "Real Sociedad          783\n",
+       "Real Betis             745\n",
+       "CA Osasuna             707\n",
+       "Getafe CF              669\n",
+       "Celta Vigo             669\n",
+       "Málaga CF              646\n",
+       "Deportivo La Coruña    646\n",
+       "RCD Mallorca           631\n",
+       "Levante UD             532\n",
+       "Real Valladolid        517\n",
+       "Racing Santander       456\n",
+       "Real Zaragoza          456\n",
+       "Rayo Vallecano         441\n",
+       "CD Alavés              418\n",
+       "Granada CF             342\n",
+       "SD Eibar               266\n",
+       "UD Almería             251\n",
+       "Sporting Gijón         228\n",
+       "UD Las Palmas          190\n",
+       "Elche CF               175\n",
+       "Recreativo Huelva      152\n",
+       "CD Numancia            152\n",
+       "CD Leganés             152\n",
+       "Cádiz CF               137\n",
+       "Girona FC               99\n",
+       "Real Murcia             76\n",
+       "Albacete                76\n",
+       "CD Tenerife             76\n",
+       "Real Oviedo             76\n",
+       "SD Huesca               76\n",
+       "Gimnàstic               38\n",
+       "Xerez CD                38\n",
+       "Hércules CF             38\n",
+       "Córdoba CF              38\n",
+       "Name: value, dtype: int64"
       ]
      },
+     "execution_count": 55,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df['division'] == 'primera']['home'].value_counts()"
+    "# Getting all the team names and their frequencies from both home and away columns\n",
+    "pd.melt(df, ['date'], ['home', 'away'])['value'].value_counts()"
    ]
   }
  ],
