--- a/dataset/football_data_co_uk/02_data_cleanup.ipynb
+++ b/dataset/football_data_co_uk/02_data_cleanup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,12 +65,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Making team names consistent"
+    "## Dropping redundant columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,65 +92,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Ath Bilbao     449\n",
-       "Valencia       449\n",
-       "Barcelona      448\n",
-       "Real Madrid    448\n",
-       "Espanol        430\n",
-       "Sevilla        430\n",
-       "Ath Madrid     410\n",
-       "Villarreal     410\n",
-       "Sociedad       391\n",
-       "Betis          372\n",
-       "Osasuna        353\n",
-       "Celta          335\n",
-       "Getafe         335\n",
-       "La Coruna      323\n",
-       "Malaga         323\n",
-       "Mallorca       315\n",
-       "Levante        266\n",
-       "Valladolid     258\n",
-       "Santander      228\n",
-       "Zaragoza       228\n",
-       "Vallecano      220\n",
-       "Alaves         209\n",
-       "Granada        171\n",
-       "Eibar          133\n",
-       "Almeria        126\n",
-       "Sp Gijon       114\n",
-       "Las Palmas      95\n",
-       "Elche           88\n",
-       "Recreativo      76\n",
-       "Leganes         76\n",
-       "Numancia        76\n",
-       "Cadiz           69\n",
-       "Girona          50\n",
-       "Murcia          38\n",
-       "Oviedo          38\n",
-       "Albacete        38\n",
-       "Tenerife        38\n",
-       "Huesca          38\n",
-       "Hercules        19\n",
-       "Xerez           19\n",
-       "Gimnastic       19\n",
-       "Cordoba         19\n",
-       "Name: HomeTeam, dtype: int64"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df[df['Div'] == 'primera']['HomeTeam'].value_counts()"
+    "Since all the matches belong to the same league, the 'Div' (division) column is unnecessary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop('Div', axis='columns')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Saving the cleaned up dataset into file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"./processed_ds/matches.csv\", index=False)"
    ]
   }
  ],
