scraped the links to single match data

--- a/dataset/ratings/01_data_extraction.ipynb
+++ b/dataset/ratings/01_data_extraction.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All data extracted from http://www.elofootball.com/"
+    "All data downloaded from http://www.elofootball.com/"
    ]
   },
   {
@@ -42,26 +42,6 @@
     "    # http://www.elofootball.com/country.php?countryiso=ESP&season=1999-2000\n",
     "    url = f\"http://www.elofootball.com/country.php?countryiso=ESP&season={year}-{year+1}\"\n",
     "    \n",
-    "    # # This dataframe contains the matches of the given season.\n",
-    "    # result = pd.DataFrame(columns=[\n",
-    "    #     'date',\n",
-    "    #     'division',\n",
-    "    #     'unused_1'\n",
-    "    #     'home',\n",
-    "    #     'home_pre_rating',\n",
-    "    #     'home_rating_delta',\n",
-    "    #     'home_post_rating',\n",
-    "    #     'result',\n",
-    "    #     'prob_h',\n",
-    "    #     'prob_d',\n",
-    "    #     'prob_a',\n",
-    "    #     'away',\n",
-    "    #     'away_pre_rating',\n",
-    "    #     'away_rating_delta',\n",
-    "    #     'away_post_rating',\n",
-    "    #     'unused_2'\n",
-    "    # ])\n",
-    "    \n",
     "    # Retrieving the URL in the Chrome window\n",
     "    driver.get(url)\n",
     "    \n",
@@ -72,7 +52,7 @@
     "    # The availability of the said element shows that the table is fully loaded\n",
     "    # and filled.\n",
     "    element = WebDriverWait(driver, 20).until(\n",
-    "        EC.presence_of_element_located((By.ID, f\"tabcontainer\"))\n",
+    "        EC.presence_of_element_located((By.ID, 'tabcontainer'))\n",
     "    )\n",
     "    soup = BeautifulSoup(driver.page_source, 'lxml')\n",
     "    \n",
