--- a/dataset/matches/01_data_consolidation.ipynb
+++ b/dataset/matches/01_data_consolidation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "1f0059f8-96e0-4a3d-8819-f65492287ac0",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "5380469c-b0ca-4390-9e0e-57121bf260b0",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "9adb0464-f019-483e-a5c4-6ac084044d5e",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
        "dict_keys(['1999_2000', '2000_2001', '2001_2002', '2002_2003', '2003_2004', '2004_2005', '2005_2006', '2006_2007', '2007_2008', '2008_2009', '2009_2010', '2010_2011', '2011_2012', '2012_2013', '2013_2014', '2014_2015', '2015_2016', '2016_2017', '2017_2018', '2018_2019', '2019_2020', '2020_2021', '2021_2022', '2022_2023'])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,6 +118,8 @@
     "    cur_df = cur_df.dropna(axis='index', how=\"all\")\n",
     "    # Removing the columns which contain only Null values\n",
     "    cur_df = cur_df.dropna(axis=\"columns\", how='all')\n",
+    "    # Adding the season as a new column\n",
+    "    cur_df['season'] = league_year\n",
     "    df_list[league_year] = cur_df\n",
     "        \n",
     "print(f\"{len(df_list)} dataframes were read.\")\n",
@@ -136,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "14d8544f",
    "metadata": {},
    "outputs": [],
@@ -162,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "613c1069",
    "metadata": {},
    "outputs": [],
@@ -176,12 +178,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "3b5d2318",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv(\"./initial_ds/matches.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8622b4c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8970, 21)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ae3a9ef5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4410, 21)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['season'].isin([f\"{year}_{year+1}\" for year in range(2011, 2023)])].shape"
    ]
   }
  ],
